submit chnages after disign fix
submit chnages after disign fix

--- a/ecommrce/index.html
+++ b/ecommrce/index.html
@@ -5,7 +5,11 @@
     <title>IMS::login</title>
     <meta name="description" content="Login page for IMS">
     <meta name="viewport" content="width=device-width">
-    <link href="Content/css/index.css" rel="stylesheet" />
+
+    <!--<link href="Scripts/style.css" rel="stylesheet" />-->
+    <link href="Content/css/custom.css" rel="stylesheet" />
+    <!--<link href="Content/css/index.css" rel="stylesheet" />-->
+    <link href="Content/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="icon" type="image/ico" href="images/eCommerce.ico" />
 </head>
 <body ng-app="loginApp">
@@ -34,21 +38,26 @@
         <div ng-view=""></div>
     </div>
 
-    <script src="scripts/jquery-1.9.1.js"></script>
-    <script src="scripts/angular.js"></script>
-    <script src="scripts/angular-route.js"></script>
-    <script src="scripts/angular-animate.js"></script>
-    <script src="scripts/angular-resource.js"></script>
-    <script src="scripts/angular-sanitize.js"></script>
+
+
+    <script src="Scripts/jquery-1.9.1.js"></script>
+    <script src="Scripts/angular.js"></script>
+    <script src="Scripts/angular.min.js"></script>
+    <script src="Scripts/angular-route.js"></script>
+    <script src="Scripts/angular-animate.js"></script>
+    <script src="Scripts/angular-resource.js"></script>
+    <script src="Scripts/angular-sanitize.js"></script>
 
     <script src="app/loginApp.js"></script>
     <!--<script src="app/directives/httpInterceptor.js"></script>-->
 
-    <script src="app/services/UserService_v1.js"></script>
-    <script src="app/services/ViewVariablesService_v1.js"></script>
-    <script src="app/controllers/loginController.js"></script>
-    <script src="app/controllers/mainController2.js"></script>
-
-
+    <script src="App/services/UserService_v1.js"></script>
+    <script src="App/services/ViewVariablesService_v1.js"></script>
+    <script src="App/controllers/loginController.js"></script>
+    <script src="App/controllers/mainController2.js"></script>
+    <script src="App/controllers/ShopmainController.js"></script>
+    <script src="App/controllers/ShopmainController.js"></script>
+    <script src="App/controllers/ShopDetailController.js"></script>
+    <script src="App/controllers/data.js"></script>
 </body>
 </html>
