--- a/ecommrce/index.html
+++ b/ecommrce/index.html
@@ -5,7 +5,7 @@
     <title>IMS::login</title>
     <meta name="description" content="Login page for IMS">
     <meta name="viewport" content="width=device-width">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--<link href="Scripts/style.css" rel="stylesheet" />-->
     <link href="Content/css/custom.css" rel="stylesheet" />
     <!--<link href="Content/css/index.css" rel="stylesheet" />-->
