--- a/ecommrce/index.html
+++ b/ecommrce/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>IMS::login</title>
+    <title>Dave</title>
     <meta name="description" content="Login page for IMS">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -10,7 +10,7 @@
     <link href="Content/css/custom.css" rel="stylesheet" />
     <!--<link href="Content/css/index.css" rel="stylesheet" />-->
     <link href="Content/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="icon" type="image/ico" href="images/eCommerce.ico" />
+    <!--<link rel="icon" type="image/ico" href="images/eCommerce.ico" />-->
 </head>
 <body ng-app="loginApp">
     <div class="splash" ng-cloak="">
