--- a/ecommrce/app_v10.html
+++ b/ecommrce/app_v10.html
@@ -8,6 +8,9 @@
     <meta content="" name="description" />
     <meta content="" name="author" />
 
+
+    <!-- BEGIN GLOBAL MANDATORY STYLES -->
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" rel="stylesheet" type="text/css" />
     <link href="ThirdParty/MetronixTheme/assets/global/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <link href="ThirdParty/MetronixTheme/assets/global/plugins/simple-line-icons/simple-line-icons.min.css" rel="stylesheet" type="text/css" />
     <link href="ThirdParty/MetronixTheme/assets/global/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
@@ -30,6 +33,22 @@
     <link href="ThirdParty/MetronixTheme/assets/layouts/layout/css/custom.min.css" rel="stylesheet" type="text/css" />
     <!-- END THEME LAYOUT STYLES -->
     <link rel="shortcut icon" href="favicon.ico" />
+
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
+    <script src="Scripts/jtemplates.js" type="text/javascript"></script>
+    <!--<script src="Scripts/jquery.blockUI.js" type="text/javascript"></script>-->
+    <script type="text/javascript" src="Scripts/imageupload.js"></script>
+    <!--<script type="text/javascript" src="Scripts/JSON.js"></script>-->
+    <script type="text/javascript" src="Scripts/jquery.simplemodal.1.4.4.min.js"></script>
+
+    <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.1/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" />
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.1/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  
+    <link href="Content/css/toaster.css" rel="stylesheet" />
 
 
 
@@ -233,7 +252,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item  ">
-                                    <a href="TestReview.aspx" class="nav-link ">
+                                    <a href="app_v10.html#/SubCategory" class="nav-link ">
                                         <i class="fa fa-map"></i>
                                         <span class="title">Sub Cateogory</span>
                                     </a>
@@ -954,14 +973,15 @@
 
 
     </div>
-    <script src="Scripts/angular.js"></script>
-    <script src="Scripts/angular-route.js"></script>
-    <script src="Scripts/angular-animate.js"></script>
+
+    <script src="scripts/angular.js"></script>
+    <script src="scripts/angular-route.js"></script>
+    <script src="scripts/angular-animate.js"></script>
     <script src="Scripts/Crypto-js.js"></script>
     <script src="Scripts/toaster.js"></script>
 
-    <script src="Scripts/angular-resource.js"></script>
-    <script src="Scripts/angular-sanitize.js"></script>
+    <script src="scripts/angular-resource.js"></script>
+    <script src="scripts/angular-sanitize.js"></script>
     <!--<script src="Scripts/angular-ui/ui-bootstrap.min.js"></script>-->
     <script src="ThirdParty/kendo/js/kendo.all.min.js"></script>
     <script src="Scripts/kendo.custom.js"></script>
@@ -976,16 +996,17 @@
     <link href="Content/css/kendo.custom.css" rel="stylesheet" />
     <!--<script src="Scripts/ui-bootstrap-tpls-0.12.1.min.js"></script>-->
     <!--<script src="Scripts/angular-ui/ui-bootstrap-tpls.min.js"></script>-->
-    <script src="Scripts/dirPagination.js"></script>
+
     <script src="Scripts/angular-ui/ui-bootstrap.min.js"></script>
     <!--<script src="Scripts/angular-ui/ui-bootstrap-tpls.min.js"></script>-->
     <script src="Scripts/angular-ui/ui-bootstrap-tpls-0.12.1.min.js"></script>
     <!--<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">-->
     <!--<script src="Scripts/bootstrap.min.js"></script>-->
     <link href="Content/css/SlimsStyle.css" rel="stylesheet" />
-    <link href="Content/css/responsive.css" rel="stylesheet" />
-    <script src="ThirdParty/ChartJs/excanvas.js"></script>
-    <script src="ThirdParty/ChartJs/Chart.js"></script>
+
+
+
+
 
     <script src="App/app_v10.js"></script>
     <script src="App/Admin/controllers/mainController_v11.js"></script>
@@ -998,6 +1019,9 @@
     <script src="App/Admin/controllers/LandingPageVisaController.js"></script>
     <script src="App/Admin/controllers/CategoryController.js"></script>
     <script src="App/Admin/Services/CategoryMasterService.js"></script>
-
+    <script src="App/Admin/controllers/SubCategoryController.js"></script>
+    <script src="App/Admin/Services/SubCategoryMasterService.js"></script>
+    <script src="App/Admin/controllers/BrandController.js"></script>
+    <script src="App/Admin/Services/BrandMasterService.js"></script>
 </body>
 </html>
