--- a/ecommrce/app_v10.html
+++ b/ecommrce/app_v10.html
@@ -257,7 +257,12 @@
                                         <span class="title">Sub Cateogory</span>
                                     </a>
                                 </li>
-
+                                <li class="nav-item  ">
+                                    <a href="app_v10.html#/Brand" class="nav-link ">
+                                        <i class="fa fa-map"></i>
+                                        <span class="title">Brand</span>
+                                    </a>
+                                </li>
 
                             </ul>
                         </li>
