--- a/ecommrce/index.html
+++ b/ecommrce/index.html
@@ -7,9 +7,11 @@
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--<link href="Scripts/style.css" rel="stylesheet" />-->
+    <link href="Content/css/index.css" rel="stylesheet" />
+    <link href="Content/css/bootstrap.min.css" rel="stylesheet" />
+
     <link href="Content/css/custom.css" rel="stylesheet" />
     <!--<link href="Content/css/index.css" rel="stylesheet" />-->
-    <link href="Content/css/bootstrap.min.css" rel="stylesheet" />
     <!--<link rel="icon" type="image/ico" href="images/eCommerce.ico" />-->
 </head>
 <body ng-app="loginApp">
@@ -47,6 +49,12 @@
     <script src="Scripts/angular-animate.js"></script>
     <script src="Scripts/angular-resource.js"></script>
     <script src="Scripts/angular-sanitize.js"></script>
+    <script src="Scripts/angular-ui/ui-bootstrap.min.js"></script>
+    <script src="Scripts/angular-ui/ui-bootstrap-tpls-0.12.1.min.js"></script>
+
+    <!--<link href="Content/css/SlimsStyle.css" rel="stylesheet" />
+    <link href="Content/css/responsive.css" rel="stylesheet" />-->
+
 
     <script src="app/loginApp.js"></script>
     <!--<script src="app/directives/httpInterceptor.js"></script>-->
@@ -58,6 +66,6 @@
     <script src="App/controllers/ShopmainController.js"></script>
     <script src="App/controllers/ShopmainController.js"></script>
     <script src="App/controllers/ShopDetailController.js"></script>
-    <script src="App/controllers/data.js"></script>
+
 </body>
 </html>
