changes for category subcategory
changes for category subcategory

--- a/ecommrce/index.html
+++ b/ecommrce/index.html
@@ -66,6 +66,6 @@
     <script src="App/controllers/ShopmainController.js"></script>
     <script src="App/controllers/ShopmainController.js"></script>
     <script src="App/controllers/ShopDetailController.js"></script>
-
+    <script src="App/controllers/CheckLoginController.js"></script>
 </body>
 </html>
