--- a/ecommrce/app_v10.html
+++ b/ecommrce/app_v10.html
@@ -263,7 +263,12 @@
                                         <span class="title">Brand</span>
                                     </a>
                                 </li>
-
+                                <li class="nav-item  ">
+                                    <a href="app_v10.html#/Item" class="nav-link ">
+                                        <i class="fa fa-map"></i>
+                                        <span class="title">Item</span>
+                                    </a>
+                                </li>
                             </ul>
                         </li>
 
@@ -1028,5 +1033,9 @@
     <script src="App/Admin/Services/SubCategoryMasterService.js"></script>
     <script src="App/Admin/controllers/BrandController.js"></script>
     <script src="App/Admin/Services/BrandMasterService.js"></script>
+    <script src="App/Admin/Services/brandService.js"></script>
+    <script src="App/Admin/Services/SubCategoryService.js"></script>
+    <script src="App/Admin/controllers/ItemController.js"></script>
+    <script src="App/Admin/Services/ItemService.js"></script>
 </body>
 </html>
