--- a/ecommrce/index.html
+++ b/ecommrce/index.html
@@ -66,7 +66,7 @@
     <script src="App/controllers/ShopmainController.js"></script>
     <script src="App/controllers/ShopmainController.js"></script>
     <script src="App/controllers/ShopDetailController.js"></script>
-
+    <script src="App/controllers/CheckLoginController.js"></script>
 
 </body>
 </html>
