changes for publishing

--- a/ecommrce/app_v10.html
+++ b/ecommrce/app_v10.html
@@ -74,7 +74,7 @@
                 <div class="page-logo">
                     <!--<a href="page_user_profile_1_account.html">-->
 
-                    <a href="/app_v10.html#/ModuleMenu"><img src="ThirdParty/MetronixTheme/assets/layouts/layout/img/logo.png" alt="logo" class="logo-default" style="margin-top: 0px" /></a>
+                    <a href="/app_v10.html#/ModuleMenu"><img src="ThirdParty/MetronixTheme/assets/layouts/layout/img/logo1.png" alt="logo" class="logo-default" style="margin-top: 0px" /></a>
                     <div class="menu-toggler sidebar-toggler" data-toggle="collapse" data-target=".navbar-collapse"></div>
                 </div>
                 <!-- END LOGO -->
@@ -913,7 +913,7 @@
                 <div class="row">
                     <div class="col-md-3 col-sm-6 col-xs-12 footer-block">
                         <h3><b>About</b></h3>
-                        <p>Student Learning Management System design and developed by<br /> @Toonztown Animation Studios Pvt Ltd. </p>
+                        <p>ADMIN POTRAL AND SHOPPING PORTAL  developed by<br />  Daljeet singh. </p>
                     </div>
                     <div class="col-md-6 col-sm-6 col-xs12 footer-block">
                         <h3><b>Helpdesk Ticket</b></h3>
@@ -933,12 +933,12 @@
                     <div class="col-md-3 col-sm-6 col-xs-12 footer-block">
                         <h3><b>Contacts</b></h3>
                         <address class="margin-bottom-40">
-                            TOLL FREE NO: 1800-137-3737
+                             NO: 9988225604 
                             <br>
                             Website
-                            <a target="_blank" href="https://www.touchstoneedu.com">www.touchstoneedu.com</a>
+                            <a target="_blank" href="https://www.Davemuslayah.com">www.Davemuslayah.com</a>
                             <br>
-                            Email: <a href="mailto:info@touchstoneedu.com">info@touchstoneedu.com</a>
+                            Email: <a href="mailto:info@Davemuslayah.com">info@Davemuslayah.com</a>
                         </address>
                     </div>
                 </div>
